samples/_failures_safe/1761157725_7d354f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1609eb3e.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_1609eb3e.c:141:9: error: expected ‘:’ or ‘...’ at end of input
  141 |         case TOKEN_EOF
      |         ^~~~
./samples/SAFE/__tmp_1609eb3e.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1609eb3e.c:141:9: error: expected declaration or statement at end of input
